--- a/web-app/frontend/journal-recommendation/package.json
+++ b/web-app/frontend/journal-recommendation/package.json
@@ -11,12 +11,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
     "framer-motion": "^10.12.16",
+    "fs-extra": "^11.1.1",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.86.0"
   },
   "scripts": {
     "start": "react-scripts start",
