--- a/web-app/frontend/journal-recommendation/package.json
+++ b/web-app/frontend/journal-recommendation/package.json
@@ -15,6 +15,7 @@
     "crypto-browserify": "^3.12.0",
     "framer-motion": "^10.12.16",
     "fs-extra": "^11.1.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "path-browserify": "^1.0.1",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
