--- a/web-app/package.json
+++ b/web-app/package.json
@@ -15,12 +15,15 @@
     "axios": "^1.4.0",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
+    "cron": "^2.3.1",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "framer-motion": "^10.12.16",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "os": "^0.1.2",
     "process": "^0.11.10"
